<resources>
    <string name="app_name">Reversi</string>
    <string name="start_buttontext">START</string>
    <string name="settings_buttontext">SETTINGS</string>
    <string name="boardsize_text">Board Color</string>
    <string name="fourbyfourgrid_text">Green</string>
    <string name="eightbyeightboard_text">Brown</string>
    <string name="playercolor_text">Player Color</string>
    <string name="black_text">Black</string>
    <string name="white_text">White</string>
    <string name="reversi_text">REVERSI</string>
    <string name="difficulty_text">SELECT DIFFICULTY</string>
    <string name="results_text">GAME RESULTS</string>
    <string name="applysettings_text">APPLY SETTINGS</string>
    <string name="newgame_text">START NEW GAME</string>
    <string name="showresults_text">SHOW RESULTS</string>
    <string name="startgame_text">START GAME</string>
    <string name="game_text">GAME</string>
    <string name="cell_description_text">A cell</string>
    <string name="gameover_text">GAME OVER</string>
    <string name="nummoves_text">NUMBER OF MOVES</string>
</resources>